--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,5 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
 
-    <color name="inactiveColorTint">#CDCDCD</color>
+    <color name="inactiveColorTint">#ababab</color>
 </resources>
