--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,4 +40,25 @@
         app:tabSelectedTextColor="@color/colorPrimary"
         app:tabTextColor="@color/colorPrimaryDark" />
 
+    <Button
+        android:textAllCaps="false"
+        android:text="Select Previous Tab"
+        app:layout_constraintBottom_toTopOf="@id/selectNextTab"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_chainStyle="packed"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_width="wrap_content"
+        android:id="@+id/selectPreviousTab"
+        android:layout_height="wrap_content" />
+
+    <Button
+        android:textAllCaps="false"
+        android:text="Select Next Tab"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_width="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/selectPreviousTab"
+        android:id="@+id/selectNextTab"
+        android:layout_height="wrap_content" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
